Fixed-Wishlist-alignment-issue-at-mobile-2.2

--- a/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_MultipleWishlist/web/css/source/_module.less
@@ -435,7 +435,7 @@
         .product {
             &-item {
                 &-checkbox {
-                    left: 20px;
+                    left: 0px;
                     position: absolute;
                     top: 20px;
                 }
